# AzureKinectDK

./: .env  README.md  main.py  pyproject.toml  requirements.txt  run.py
AzureKinect3DReconstruction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Reconstruction/: Reconstruction.py
app/: azure_kinect.py  models.py  mongo_client.py  mqtt_client.py  realtime_processor.py  shelf_scanner.py  spatial_lm.py  visualization.py
